@@ -29,7 +29,6 @@ import org.junit.jupiter.api.Test;
 import org.apache.kafka.common.config.*;
 
 import java.io.StringReader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -51,7 +50,7 @@ public class SinkConfigTest {
         log.info("-----------------Sink Validate Example Config----------------");
         Properties properties = new Properties();
         Path path = FileSystems.getDefault().getPath(TEST_PATH, "sink_task_no_error.properties");
-        properties.load((new StringReader(Files.readString(path, StandardCharsets.US_ASCII))));
+        properties.load((new StringReader(new String(Files.readAllBytes(path)))));
 
         Map<String, String> map = new HashMap<String, String>();
         for (final String name: properties.stringPropertyNames())
@@ -71,7 +70,7 @@ public class SinkConfigTest {
         log.info("-----------------Sink Validate Example Config 2----------------");
         Properties properties = new Properties();
         Path path = FileSystems.getDefault().getPath(TEST_PATH, "sink_task_no_error.properties");
-        properties.load((new StringReader(Files.readString(path, StandardCharsets.US_ASCII))));
+        properties.load((new StringReader(new String(Files.readAllBytes(path)))));
 
         Map<String, String> map = new HashMap<String, String>();
         for (final String name: properties.stringPropertyNames())
@@ -92,7 +91,7 @@ public class SinkConfigTest {
         log.info("-----------------CheckTaskClass----------------");
         Properties properties = new Properties();
         Path path = FileSystems.getDefault().getPath(TEST_PATH, "sink_task_no_error.properties");
-        properties.load((new StringReader(Files.readString(path, StandardCharsets.US_ASCII))));
+        properties.load((new StringReader(new String(Files.readAllBytes(path)))));
 
         Map<String, String> map = new HashMap<String, String>();
         for (final String name: properties.stringPropertyNames())
@@ -107,7 +106,7 @@ public class SinkConfigTest {
         log.info("-----------------CheckConnectorStartStop----------------");
         Properties properties = new Properties();
         Path path = FileSystems.getDefault().getPath(TEST_PATH, "sink_task_no_error.properties");
-        properties.load((new StringReader(Files.readString(path, StandardCharsets.US_ASCII))));
+        properties.load((new StringReader(new String(Files.readAllBytes(path)))));
 
         Map<String, String> map = new HashMap<String, String>();
         for (final String name: properties.stringPropertyNames())
