@@ -20,17 +20,13 @@ package org.apache.plc4x.kafka.config;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import org.apache.plc4x.kafka.config.Constants;
 import org.apache.plc4x.kafka.Plc4xSourceConnector;
 import org.apache.plc4x.kafka.Plc4xSourceTask;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 
-import org.apache.kafka.common.config.*;
-
 import java.io.StringReader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -53,7 +49,7 @@ public class SourceTaskTest {
         Path path = FileSystems.getDefault().getPath(
             "src/test/java/org/apache/plc4x/kafka/properties/",
             "source_task_no_error.properties");
-        properties.load((new StringReader(Files.readString(path, StandardCharsets.US_ASCII))));
+        properties.load((new StringReader(new String(Files.readAllBytes(path)))));
 
         Map<String, String> map = new HashMap<String, String>();
         for (final String name: properties.stringPropertyNames())
